--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
 </head>
 <body>
   <div class="main">
-  <header class='info'>
-    <img src="./img/icon/info.svg" alt="">
-  </header>
-  <div class="content">
-    <img id='logo' src="./img/logo.svg" alt="">
-    <img id='code' src="./img/entercode.png" alt="">
-    <form id='code-form'>
-      <input type="text" class="form-control" id="code_input" placeholder="코드">
-      <img type="submit" id="code_button" src="./img/icon/start.svg" alt="">
-    </form>
-  </div>
+    <header id="info">
+        <img src="./img/icon/info.svg" alt="">
+    </header>
+    <div class="content">
+      <img id='logo' src="./img/logo.svg" alt="">
+      <img id='code' src="./img/entercode.png" alt="">
+        <input type="text" class="form-control" id="code_input" placeholder="코드">
+        <img type="submit" id="code_button" src="./img/icon/start.svg" alt="">
+    </div>
   </div>
   <script src="./js/main.js"></script>
 </body>
