--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img id='logo' src="./img/logo.svg" alt="">
       <img id='code' src="./img/entercode.png" alt="">
         <input type="text" class="form-control" id="code_input" placeholder="코드">
-        <img type="submit" id="code_button" src="./img/icon/start.svg" alt="">
+        <img type="submit" id="code_button" src="./img/icon/icon_play.svg" alt="">
     </div>
   </div>
   <script src="./js/main.js"></script>
