code text in css

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     </header>
     <div class="content">
       <img id='logo' src="./img/logo.svg" alt="">
-      <img id='code' src="./img/entercode.png" alt="">
-        <input type="text" class="form-control" id="code_input" placeholder="코드">
-        <img type="submit" id="code_button" src="./img/icon/icon_play.svg" alt="">
+      <div id='code'>  </div>
+      <!-- <img id='code' src="./img/entercode.png" alt=""> -->
+      <input type="text" class="form-control" id="code_input" placeholder="코드">
+      <img type="submit" id="code_button" src="./img/icon/icon_play.svg" alt="">
     </div>
   </div>
   <script src="./js/main.js"></script>
