--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div id='code'>  </div>
       <!-- <img id='code' src="./img/entercode.png" alt=""> -->
       <input type="text" class="form-control" id="code_input" placeholder="코드">
-      <img type="submit" id="code_button" src="./img/icon/icon_play.svg" alt="">
+      <img id="code_button" src="./img/icon/icon_play.svg" alt="">
     </div>
   </div>
   <script src="./js/main.js"></script>
