--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
   </style>
 </head>
 <body>
+
   <div class="main">
     <header id="info">
-        <img src="./img/icon/info.svg" alt="">
+        <a id="info-button" href="#info-popup"><img src="./img/icon/info.svg" alt=""></a>
     </header>
+    <div id="info-popup" class="overlay"></div>
     <div class="content">
       <img id='logo' src="./img/logo.svg" alt="">
       <div id='code'>  </div>
       <!-- <img id='code' src="./img/entercode.png" alt=""> -->
       <input type="text" class="form-control" id="code_input" placeholder="코드">
-      <img id="code_button" src="./img/icon/icon_play.svg" alt="">
+      <img id="code_button" href="#popup1" src="./img/icon/icon_play.svg" alt="">
+
     </div>
   </div>
   <script src="./js/main.js"></script>
