modal other approach

--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
 
   <div class="main">
     <header id="info">
-        <a id="info-button" href="#info-popup"><img src="./img/icon/info.svg" alt=""></a>
+        <a id="info-button"><img src="./img/icon/info.svg" alt=""></a>
     </header>
-    <div id="info-popup" class="overlay"></div>
+
+    <div id="info-overlay" class="overlay">
+      <div class="overlay-content">
+        <span id="closeBtn" class="closeBtn">&times;</span>
+        <p>hello don</p>
+      </div>
+    </div>
     <div class="content">
       <img id='logo' src="./img/logo.svg" alt="">
       <div id='code'></div>
