modal info page completed. it connects to next page

--- a/start.html
+++ b/start.html
@@ -60,11 +60,11 @@
     <div class="content">
       <img id='logo' src="./img/logo.svg" alt="">
       <div class='text-box'>
-        <div id="code"></div>
+        <div id="start-game-img"></div>
       </div>
       <!-- <img id='code' src="./img/entercode.png" alt=""> -->
-      <input type="text" class="form-control" id="code_input" placeholder="코드">
-      <img id="code_button" class='blue_button' href="#popup1" src="./img/icon/icon_play.svg" alt="">
+
+      <img id="start_button" class='blue_button' href="#popup1" src="./img/icon/icon_play.svg" alt="">
 
     </div>
   </div>
