replace new bg svg

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 <body>
 
   <div class="main">
+    <div class="bg-container">
+    <div class="bg-box">
+        <img src="./img/bg1_bottom.svg">
+    </div>
+  </div>
     <header id="info">
         <a id="info-button"><img src="./img/icon/info.svg" alt=""></a>
     </header>
