--- a/start.html
+++ b/start.html
@@ -60,7 +60,8 @@
     <div class="content">
       <img id='logo' src="./img/logo.svg" alt="">
       <div class='text-box'>
-        <div id="start-game-img"></div>
+        <img id="start-game-img" src="./img/gamestart.png" alt="">
+        <!-- <div id="start-game-img"></div> -->
       </div>
       <!-- <img id='code' src="./img/entercode.png" alt=""> -->
 
