--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- <img id='code' src="./img/entercode.png" alt=""> -->
       <input type="text" class="form-control" id="code_input" placeholder="코드">
       <img id="code_button" class='blue_button' href="#popup1" src="./img/icon/icon_play.svg" alt="">
-
+<p>hellow</p>
     </div>
   </div>
   <script src="./js/main.js"></script>
