--- a/start.html
+++ b/start.html
@@ -42,7 +42,7 @@
           <table>
           <tr>
             <th>제작사 :</th>
-            <th><strong>주식회사 시티서커스</strong></th>
+            <th><strong>주식회사 시티서커스 1 </strong></th>
           </tr>
           <tr>
             <th>문의처 :</th>
