updated font files and css code

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
           <table>
             <tr>
               <th>제작사 :</th>
-              <th><strong>주식회사 시티서커스</strong></th>
+              <th><strong class='str'>주식회사 시티서커스</strong></th>
             </tr>
             <tr>
               <th>문의처 :</th>
-              <th><strong>email@citycircus.kr</strong></th>
+              <th><strong class='str'>email@citycircus.kr</strong></th>
             </tr>
             <tr>
               <th></th>
-              <th><strong>070-8885-8812</strong></th>
+              <th><strong class='str'>070-8885-8812</strong></th>
             </tr>
           </table>
         </div>
