stage1-1 page is implemented

--- a/stage1-1.html
+++ b/stage1-1.html
@@ -1,9 +1,3 @@
-<!--
-authur don kim
-updated date Dec 9th 2021
-Main page of 루비팡의 모험
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,7 +15,7 @@ Main page of 루비팡의 모험
 
   <title>루비팡의 모험</title>
   <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./css/start.css">
+  <link rel="stylesheet" href="./css/stage.css">
 </head>
 
 <body>
@@ -30,7 +24,7 @@ Main page of 루비팡의 모험
     <!-- background bottom image -->
     <div class="bg-container">
       <div class="bg-box">
-        <img src="./img/bg1_bottom.svg">
+        <img src="./img/bg_bottom_2.png">
       </div>
     </div>
     <!-- information icon on the top right -->
@@ -67,10 +61,21 @@ Main page of 루비팡의 모험
     </div>
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
-      <img class='logo-image' src="./img/logo.svg" alt="">
+      <div class="read-info">
+      <p>내가 엄마를 위해</p>
+      <p>할 수 있는 일이 없을까..?</p>
+      <p>용궁 신문에 혹시 방법이 있을지도 모른다.</p>
+      <p>.</p>
+      <p>.</p>
+      <p>.</p>
+      <p>아래의 그림과 매치되는</p>
+      <p>기사내용을 읽어보자!</p>
+      </div>
+      <img src="./img/stage1/stage1_clip1.jpg" alt="">
+      <!-- <img class='logo-image' src="./img/logo.svg" alt="">
       <div class='shade-text-box'><p>코드를 입력하세요</p></div>
       <input type="text" class="form-control code-text-input" id="codeInput" placeholder="코드">
-      <div id="codeError"></div>
+      <div id="codeError"></div> -->
       <img id="codeBtn" class='start-button' src="./img/icon/icon_play.svg" alt="">
     </div>
   </div>
