--- a/start.html
+++ b/start.html
@@ -15,6 +15,7 @@
 
   <title>루비팡의 모험</title>
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/start.css">
 </head>
 <body>
   <!-- background bottom image -->
@@ -27,12 +28,12 @@
     </div>
     <!-- information icon on the top right -->
     <div class="info">
-      <a id="infoButton"><img src="./img/icon/info.svg" alt=""></a>
+      <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
     <div id="infoOverlay" class="overlay">
       <div class="overlay-content">
-        <div class="close-button">
+        <div class="close-btn">
           <!-- x button &times -->
           <a id='closeBtn'><img src="./img/icon/icon_delete.svg" alt=""></a>
         </div>
