--- a/stage1-2.html
+++ b/stage1-2.html
@@ -23,7 +23,10 @@
   <div class="main">
     <!-- background bottom image -->
     <div class="bg-bottom">
-        <img src="./img/bg/bg_bottom2.svg">
+        <img src="./img/bg/bg_bottom3.svg">
+    </div>
+    <div class="bg-middle">
+      <img src="./img/clip/stage1_middle.svg" alt="">
     </div>
     <!-- information icon on the top right -->
     <div class="info">
@@ -60,23 +63,29 @@
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
       <div class="read-info">
-      <p>내가 엄마를 위해</p>
-      <p>할 수 있는 일이 없을까..?</p>
-      <p>용궁 신문에 혹시 방법이 있을지도 모른다.</p>
-      <p>.</p>
-      <p>.</p>
-      <p>.</p>
-      <p>아래의 그림과 매치되는</p>
-      <p>기사내용을 읽어보자!</p>
+      <p>생명의 정수를 구해야겠다.</p>
+      <br>
+      <p>배가 부서져 있으니</p>
+      <p>용궁으로 갈 수 있도록</p>
+      <p>기차를 타야겠다.</p>
+      <br>
+      <p>그런데 기차에 시동이 걸리지 않아.</p>
+      <br>
+      <p>저쪽에 망가진 조타륜과</p>
+      <p>누군가 일부러 날개의 항해일지를</p>
+      <p>흩뿌려 놓은 것 같은데...이것들<p>
+      <p>뭔가 힌트가 있는게 확실해!</p>
+      <br>
+      <p>조타륜과 항해일지의 단서를</p>
+      <p>통해, 기타의 시동암호를 얻자.</p>
       </div>
-      <img class='stage-img' src="./img/stage1/stage1_clip1.jpg" alt="">
+      <!-- <img class='stage-img' src="./img/stage1/stage1_clip1.jpg" alt=""> -->
       <!-- <img class='logo-image' src="./img/logo.svg" alt="">
       <div class='shade-text-box'><p>코드를 입력하세요</p></div>
       <input type="text" class="form-control code-text-input" id="codeInput" placeholder="코드">
       <div id="codeError"></div> -->
-      <a href="stage1-2.html">
-        <img class='start-button' src="./img/icon/icon_play.svg" alt="">
-      </a>
+      <input type="text" class="form-control" placeholder="답">
+      <img id="codeBtn" class='start-button' src="./img/icon/icon_play.svg" alt="">
     </div>
   </div>
   <script src="./js/main.js"></script>
