--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Main page of 루비팡의 모험
       <div class='shade-text-box'><p>코드를 입력하세요</p></div>
       <input type="text" class="form-control code-text-input" id="codeInput" placeholder="코드">
       <div id="codeError"></div>
-      <img id="codeBtn" class='start-button' src="./img/icon/icon_play.svg" alt="">
+      <a id="codeBtn" class='start-button'><img src="./img/icon/icon_play.svg" alt=""></a>
     </div>
   </div>
   <script src="./js/main.js"></script>
