--- a/stage1-1.html
+++ b/stage1-1.html
@@ -23,7 +23,7 @@
   <div class="main">
     <!-- background bottom image -->
     <div class="bg-bottom">
-        <img src="./img/bg/bg_bottom2.svg">
+        <img src="./img/bg/bg_bottom5.svg">
     </div>
     <!-- information icon on the top right -->
     <div class="info">
@@ -74,8 +74,8 @@
       <div class='shade-text-box'><p>코드를 입력하세요</p></div>
       <input type="text" class="form-control code-text-input" id="codeInput" placeholder="코드">
       <div id="codeError"></div> -->
-      <a href="stage1-2.html">
-        <img class='start-button' src="./img/icon/icon_play.svg" alt="">
+      <a class='next-button' href="stage1-2.html">
+        <img src="./img/icon/icon_play.svg" alt="">
       </a>
     </div>
   </div>
