adjust margin on start page

--- a/stage1-1.html
+++ b/stage1-1.html
@@ -31,7 +31,7 @@
     </div>
     <!-- information modal page -->
     <div id="infoOverlay" class="overlay">
-      <div class="overlay-content">
+      <div class="overlay-content info-overlay">
         <div class="close-btn">
           <!-- x button &times -->
           <a id='closeBtn'><img src="./img/icon/icon_delete.svg" alt=""></a>
