--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Main page of 루비팡의 모험
     </div>
     <!-- information modal page -->
     <div id="infoOverlay" class="overlay">
-      <div class="overlay-content">
+      <div class="overlay-content info-overlay">
         <div class="close-btn">
           <!-- x button &times -->
           <a id='closeBtn'><img src="./img/icon/icon_delete.svg" alt=""></a>
