--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Main page of 루비팡의 모험
       </div>
     </div>
     <!-- information icon on the top right -->
-    <div class="info">
+    <div class="info btn-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
@@ -69,9 +69,9 @@ Main page of 루비팡의 모험
     <div class="contents">
       <img class='logo-image' src="./img/logo.svg" alt="">
       <div class='shade-text-box'><p>코드를 입력하세요</p></div>
-      <input type="text" class="form-control code-text-input" id="codeInput" placeholder="코드">
+      <input type="password" class="form-control code-text-input" id="codeInput" inputmode="numeric" placeholder="코드">
+      <a id="codeBtn" class='start-button '><img class='btn-shadow' src="./img/icon/icon_play.svg" alt=""></a>
       <div id="codeError"></div>
-      <a id="codeBtn" class='start-button'><img src="./img/icon/icon_play.svg" alt=""></a>
     </div>
   </div>
   <script src="./js/main.js"></script>
