--- a/stage2-2.html
+++ b/stage2-2.html
@@ -73,9 +73,8 @@
           <img src="./img/bg/bg_hinticon.svg" alt="">
         </div>
         <div class="box-description">
-          <p>향해일지에 적힌 시간을 날짜 순서대로</p>
-          <p>나열 후 조타륜에 적힌 시계 모양대로</p>
-          <p>시침, 분침, 초침을 대입해 보세요</p>
+          <p>별주부전엔 거북이가 아닌</p>
+          <p>자라가 나와요 !</p>
           <br>
         </div>
       </div>
@@ -84,21 +83,25 @@
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
       <div class="read-info">
-      <p>생명의 정수를 구해야겠다.</p>
+      <p>Q. 필요한 변장도구를 찾아주세요.</p>
       <br>
-      <p>배가 부서져 있으니</p>
-      <p>용궁으로 갈 수 있도록</p>
-      <p>기차를 타야겠다.</p>
+      <p class="sml-font">(힌트- 별주부전의 이야기를 잘 떠올려 주세요!)</p>
       <br>
-      <p>그런데 기차에 시동이 걸리지 않아.</p>
       <br>
-      <p>저쪽에 망가진 조타륜과</p>
-      <p>누군가 일부러 날개의 항해일지를</p>
-      <p>흩뿌려 놓은 것 같은데...이것들<p>
-      <p>뭔가 힌트가 있는게 확실해!</p>
+      <ol type="1">
+        <li>거북이 등껍질</li>
+        <li>문어모양 모자</li>
+        <li>산호초 패딩</li>
+        <li>자라 등껍질</li>
+      </ol>
+      <!-- <p>1) 거북이 등껍질</p>
       <br>
-      <p>조타륜과 항해일지의 단서를</p>
-      <p>통해, 기타의 시동암호를 얻자.</p>
+      <p>2) 문어모양 모자</p>
+      <br>
+      <p>3) 산호초 패딩  </p>
+      <br>
+      <p>4) 자라 등껍질   </p>
+      <br> -->
       </div>
         <input id="answer1" type="text" class="form-control answer-input" placeholder="정답 입력">
         <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
