used json to store answers

--- a/stage2-2.html
+++ b/stage2-2.html
@@ -103,7 +103,7 @@
       <p>4) 자라 등껍질   </p>
       <br> -->
       </div>
-        <input id="answer1" type="text" class="form-control answer-input" placeholder="정답 입력">
+        <input id="answer" value=1 type="number" class="form-control answer-input" placeholder="정답 입력">
         <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
     </div>
   <script src="./js/main.js"></script>
