--- a/stage2-1.html
+++ b/stage2-1.html
@@ -28,33 +28,7 @@
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
-    <div id="infoOverlay" class="overlay">
-      <div class="overlay-content info-overlay">
-        <div class="close-btn">
-          <!-- x button &times -->
-          <a id='closeBtn'><img src="./img/icon/icon_delete.svg" alt=""></a>
-        </div>
-        <div class="box-description">
-          <p>안녕하세요</p>
-          <p><strong>래빗팡의 모험</strong>을 이용해주셔서 감사합니다.</p>
-          <br>
-          <table>
-            <tr>
-              <th>제작사 :</th>
-              <th><strong class='str'>주식회사 시티서커스</strong></th>
-            </tr>
-            <tr>
-              <th>문의처 :</th>
-              <th><strong class='str'>email@citycircus.kr</strong></th>
-            </tr>
-            <tr>
-              <th></th>
-              <th><strong class='str'>070-8885-8812</strong></th>
-            </tr>
-          </table>
-        </div>
-      </div>
-    </div>
+    <div id="infoModal"></div>
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
       <div class="read-info">
@@ -71,7 +45,7 @@
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
     </div>
-  <script src="./js/main.js"></script>
+  <script src="./js/info.js"></script>
 </body>
 
 </html>
