--- a/stage2-2.html
+++ b/stage2-2.html
@@ -31,33 +31,7 @@
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
-    <div id="infoOverlay" class="overlay">
-      <div class="overlay-content info-overlay">
-        <div class="close-btn">
-          <!-- x button &times -->
-          <a id='closeBtn'><img src="./img/icon/icon_delete.svg" alt=""></a>
-        </div>
-        <div class="box-description">
-          <p>안녕하세요</p>
-          <p><strong>래빗팡의 모험</strong>을 이용해주셔서 감사합니다.</p>
-          <br>
-          <table>
-            <tr>
-              <th>제작사 :</th>
-              <th><strong class='str'>주식회사 시티서커스</strong></th>
-            </tr>
-            <tr>
-              <th>문의처 :</th>
-              <th><strong class='str'>email@citycircus.kr</strong></th>
-            </tr>
-            <tr>
-              <th></th>
-              <th><strong class='str'>070-8885-8812</strong></th>
-            </tr>
-          </table>
-        </div>
-      </div>
-    </div>
+    <div id="infoModal"></div>
 
     <!-- hint modal page -->
     <div id="hintOverlay" class="overlay">
@@ -94,19 +68,12 @@
         <li>산호초 패딩</li>
         <li>자라 등껍질</li>
       </ol>
-      <!-- <p>1) 거북이 등껍질</p>
-      <br>
-      <p>2) 문어모양 모자</p>
-      <br>
-      <p>3) 산호초 패딩  </p>
-      <br>
-      <p>4) 자라 등껍질   </p>
-      <br> -->
+
       </div>
         <input id="answer" value=1 type="number" class="form-control answer-input" placeholder="정답 입력">
         <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
     </div>
-  <script src="./js/main.js"></script>
+  <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
 </body>
 
