--- a/stage3-1.html
+++ b/stage3-1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,34 +13,40 @@
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/5bf6cd29fd.js" crossorigin="anonymous"></script>
 
-
   <title>루비팡의 모험</title>
   <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./css/start.css">
+  <link rel="stylesheet" href="./css/stage.css">
 </head>
+
 <body>
     <!-- background bottom image -->
-    <div class="bg-container">
-      <div class="bg-box">
-        <img src="./img/bg1_bottom.svg">
-      </div>
+    <div class="bg-bottom">
+        <img src="./img/bg/bg_bottom5.svg">
     </div>
     <!-- information icon on the top right -->
-    <div class="info">
+    <div class="info btn-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
     <div id="infoModal"></div>
-    
+    <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
-      <img class='logo-image' src="./img/logo.svg" alt="">
-      <!-- <img id='logo' src="./img/logo.svg" alt=""> -->
-      <div class='shade-text-box'>
-        <img src="./img/gamestart.png" alt="">
+      <div class="read-info">
+        <p>용궁행 급행열차에 오르고자 하는데</p>
+        <p>필요한 것은 용궁행 급행열차 티켓이다.</p>
+        <br>
+        <p>한편, 근처에 예쁜 불가사리가 티켓을</p>
+        <p>잃어버려 곤란에 처해있다.</p>
+        <br>
+        <p>그녀를 돕기 위해 다른 시민의</p>
+        <p>티켓을 훔쳐 오자.</p>
       </div>
-      <img id="startBtn" class='start-button' src="./img/icon/icon_play.svg" alt="">
+      <img class='stage-img' src="./img/stage3/sta-3-1.jpg" alt="">
+      <a class='next-button' href="stage3-2.html">
+        <img src="./img/icon/icon_play.svg" alt="">
+      </a>
     </div>
-  <script src="./js/main.js"></script>
   <script src="./js/info.js"></script>
 </body>
+
 </html>
