--- a/stage3-2.html
+++ b/stage3-2.html
@@ -58,24 +58,20 @@
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
       <div class="read-info">
-      <p>생명의 정수를 구해야겠다.</p>
-      <br>
-      <p>배가 부서져 있으니</p>
-      <p>용궁으로 갈 수 있도록</p>
-      <p>기차를 타야겠다.</p>
-      <br>
-      <p>그런데 기차에 시동이 걸리지 않아.</p>
-      <br>
-      <p>저쪽에 망가진 조타륜과</p>
-      <p>누군가 일부러 날개의 항해일지를</p>
-      <p>흩뿌려 놓은 것 같은데...이것들<p>
-      <p>뭔가 힌트가 있는게 확실해!</p>
-      <br>
-      <p>조타륜과 항해일지의 단서를</p>
-      <p>통해, 기타의 시동암호를 얻자.</p>
+        <p>놓인 책들 중 아래 그림에 해당되는 책을</p>
+        <p>유심히 살펴본후, 네모칸에 들어갈</p>
+        <p>알맞은 문구를 입력해 주세요.</p>
+        <br>
+        <p class="sml-font" style='color: red;'>* 이번 문제는 하단 링트에 연결된 페이지 </p>
+        <p class="sml-font" style='color: red;'>문제의 정답을 입력해 주셔야 합니다.</p>
+        <p class="sml-font" style='color: red;'>그리고 다시 지금 페이지로 넘어와 </p>
+        <p class="sml-font" style='color: red;'>다음페이지로 이동하세요</p>
+        <br>
       </div>
-        <input id="answer" value=0 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
-        <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
+      <img class='stage-img' src="./img/stage3/sta-3-2.jpg" alt="">
+      <a href="http://dev.sherlock-holmes.co.kr/test_city_circus.heitu">연결된 페이지</a>
+      <!-- <input id="answer" value=2 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력"> -->
+      <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
