fixed shadow and stage3 minor issues

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ Main page of 루비팡의 모험
       </div>
     </div>
     <!-- information icon on the top right -->
-    <div class="info btn-shadow">
+    <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
     <div id="infoModal"></div>
-  
+
 
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
