--- a/stage1-2.html
+++ b/stage1-2.html
@@ -27,7 +27,7 @@
       <img src="./img/clip/stage1_middle.svg" alt="">
     </div>
     <!-- information icon on the top right -->
-    <div class="info">
+    <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
