--- a/stage3-1.html
+++ b/stage3-1.html
@@ -24,7 +24,7 @@
         <img src="./img/bg/bg_bottom5.svg">
     </div>
     <!-- information icon on the top right -->
-    <div class="info btn-shadow">
+    <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
@@ -41,7 +41,7 @@
         <p>그녀를 돕기 위해 다른 시민의</p>
         <p>티켓을 훔쳐 오자.</p>
       </div>
-      <img class='stage-img' src="./img/stage3/sta-3-1.jpg" alt="">
+      <img class='stage-img sml-shadow' src="./img/stage3/sta-3-1.jpg" alt="">
       <a class='next-button' href="stage3-2.html">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
