--- a/stage1-1.html
+++ b/stage1-1.html
@@ -24,7 +24,7 @@
         <img src="./img/bg/bg_bottom5.svg">
     </div>
     <!-- information icon on the top right -->
-    <div class="info">
+    <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
@@ -41,7 +41,7 @@
       <p>아래의 그림과 매치되는</p>
       <p>기사내용을 읽어보자!</p>
       </div>
-      <img class='stage-img' src="./img/stage1/stage1_clip1.jpg" alt="">
+      <img class='stage-img sml-shadow' src="./img/stage1/stage1_clip1.jpg" alt="">
       <a class='next-button' href="stage1-2.html">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
