--- a/stage2-1.html
+++ b/stage2-1.html
@@ -24,7 +24,7 @@
         <img src="./img/bg/bg_bottom5.svg">
     </div>
     <!-- information icon on the top right -->
-    <div class="info">
+    <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
     <!-- information modal page -->
@@ -36,7 +36,7 @@
       <p>그런데 주변이 어수선하다.</p>
       <p>해당 그림에 대한 기사를 읽어보자</p>
       </div>
-      <img class='stage-img' src="./img/stage2/sta-2-1.jpeg" alt="">
+      <img class='stage-img sml-shadow' src="./img/stage2/sta-2-1.jpeg" alt="">
       <div class="read-info">
       <p>바다생물로 변장하는 도구를 찾아</p>
       <p>용궁행 급행열차를 타야겠다.</p>
