change value attr to index attr in

--- a/stage1-2.html
+++ b/stage1-2.html
@@ -74,7 +74,7 @@
       <p>조타륜과 항해일지의 단서를</p>
       <p>통해, 기타의 시동암호를 얻자.</p>
       </div>
-        <input id="answer" value=0 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
+        <input id="answer" index=0 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
         <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
     </div>
   <script src="./js/info.js"></script>
