--- a/stage2-2.html
+++ b/stage2-2.html
@@ -70,7 +70,7 @@
       </ol>
 
       </div>
-        <input id="answer" value=1 type="number" class="form-control answer-input" placeholder="정답 입력">
+        <input id="answer" index=1 type="number" class="form-control answer-input" placeholder="정답 입력">
         <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
     </div>
   <script src="./js/info.js"></script>
