--- a/stage3-2.html
+++ b/stage3-2.html
@@ -34,7 +34,7 @@
     <div id="infoModal"></div>
 
     <!-- hint modal page -->
-    
+
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
       <div class="read-info">
@@ -49,7 +49,7 @@
       </div>
       <img class='stage-img sml-shadow' src="./img/stage3/sta-3-2.jpg" alt="">
       <a href="http://dev.sherlock-holmes.co.kr/test_city_circus.heitu">연결된 페이지</a>
-      <a id="answer" value=2></a>
+      <a id="answer" index=2></a>
       <!-- <input id="answer" value=2 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력"> -->
       <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
     </div>
