--- a/stage3-2.html
+++ b/stage3-2.html
@@ -34,7 +34,24 @@
     <div id="infoModal"></div>
 
     <!-- hint modal page -->
-
+    <div id="hintOverlay" class="overlay">
+      <div class="overlay-content hint-overlay">
+        <div class="close-btn">
+          <!-- x button &times -->
+          <a id='hintCloseBtn'><img src="./img/icon/icon_delete.svg" alt=""></a>
+        </div>
+        <div class="img-top-hint">
+          <img src="./img/icon/icon_hint.svg" alt="">
+        </div>
+        <div class="img-bottom-hint">
+          <img src="./img/bg/bg_hinticon.svg" alt="">
+        </div>
+        <div class="box-description">
+          <p>별의 '710-17'이 의미하는 것은</p>
+          <p>별의 '기억'입니다.</p>
+        </div>
+      </div>
+    </div>
     <!-- main contents includes: logo, code text box, code input and next button -->
     <div class="contents">
       <div class="read-info">
@@ -49,12 +66,19 @@
       </div>
       <img class='stage-img sml-shadow' src="./img/stage3/sta-3-2.jpg" alt="">
       <a href="http://dev.sherlock-holmes.co.kr/test_city_circus.heitu">연결된 페이지</a>
+      <a id="hint" href="#">힌트</a>
       <a id="answer" index=2></a>
       <!-- <input id="answer" value=2 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력"> -->
       <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
+  <script>
+      $("#hint").click(function() {
+        console.log("clicked");
+        $('#hintOverlay').css({display: "block"});
+      });
+  </script>
 </body>
 
 </html>
