images have been updated

--- a/stage4-1.html
+++ b/stage4-1.html
@@ -80,7 +80,7 @@
       <p>파악해 용궁행 티켓을 획득하라!</p>
       <br>
       </div>
-      <img class='stage-img sml-shadow' src="./img/stage4/sta-4-1.jpg" alt="">
+      <img class='stage-img sml-shadow' src="./img/stage4/sta-4-1.png" alt="">
       <br>
       <input id="answer" index=3 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
       <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
