--- a/stage1-1.html
+++ b/stage1-1.html
@@ -40,7 +40,7 @@
       <p>아래의 그림과 매치되는</p>
       <p>기사내용을 읽어보자!</p>
       </div>
-      <img class='stage-img sml-shadow' src="./img/stage1/stage1_clip1.jpg" alt="">
+      <img class='stage-img sml-shadow' src="./img/stage1/sta-1-1.png" alt="">
       <a class='next-button' href="stage1-2.html">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
