--- a/stage3-1.html
+++ b/stage3-1.html
@@ -41,7 +41,7 @@
         <p>그녀를 돕기 위해 다른 시민의</p>
         <p>티켓을 훔쳐 오자.</p>
       </div>
-      <img class='stage-img sml-shadow' src="./img/stage3/sta-3-1.jpg" alt="">
+      <img class='stage-img sml-shadow' src="./img/stage3/sta-3-1.png" alt="">
       <a class='next-button' href="stage3-2.html">
         <img src="./img/icon/icon_play.svg" alt="">
       </a>
