--- a/stage3-2.html
+++ b/stage3-2.html
@@ -23,9 +23,7 @@
     <div class="bg-bottom">
         <img src="./img/bg/bg_bottom4.svg">
     </div>
-    <div class="bg-middle">
-      <img src="./img/clip/stage1_middle.svg" alt="">
-    </div>
+
     <!-- information icon on the top right -->
     <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
@@ -64,7 +62,7 @@
         <p class="sml-font" style='color: red;'>그리고 다시 지금 페이지로 넘어와 </p>
         <p class="sml-font" style='color: red;'>다음페이지로 이동하세요</p>
       </div>
-      <img class='stage-img sml-shadow' src="./img/stage3/sta-3-2.jpg" alt="">
+      <img class='stage-img sml-shadow' src="./img/stage3/sta-3-2.png" alt="">
       <a href="http://dev.sherlock-holmes.co.kr/test_city_circus.heitu">연결된 페이지</a>
       <a id="hint" href="#">힌트</a>
       <a id="answer" index=2></a>
