--- a/stage4-1.html
+++ b/stage4-1.html
@@ -65,10 +65,11 @@
           <!-- <a id='hintCloseBtn'><img src="./img/icon/icon_delete.svg" alt=""></a> -->
         <!-- </div> -->
 
-        <img class='stage-img' src="./img/stage4/sta-4-2.png" alt="">
+        <img class='stage-img ticket-ani' src="./img/stage4/sta-4-2.png" alt="">
         <img id="ticketNextBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
       </div>
     </div>
+
 
 
     <!-- main contents includes: logo, code text box, code input and next button -->
@@ -84,6 +85,7 @@
       <br>
       <input id="answer" index=3 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
       <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
+      <a href="#hintOverlay">Open Demo Modal</a>
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
