--- a/stage1-2.html
+++ b/stage1-2.html
@@ -26,6 +26,9 @@
     <div class="bg-middle">
       <img src="./img/clip/stage1_middle.svg" alt="">
     </div>
+    <div class="bg-center">
+      <img class='run-fish' src="./img/clip/fish1.svg" alt="">
+    </div>
     <!-- information icon on the top right -->
     <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
