--- a/stage4-1.html
+++ b/stage4-1.html
@@ -57,16 +57,12 @@
       </div>
     </div>
 
-    <!-- hint modal page -->
+    <!-- ticket modal page -->
     <div id="ticketOverlay" class="overlay">
       <div class="overlay-content ticket-overlay">
-        <!-- <div class="close-btn"> -->
-          <!-- x button &times -->
-          <!-- <a id='hintCloseBtn'><img src="./img/icon/icon_delete.svg" alt=""></a> -->
-        <!-- </div> -->
-
         <img class='stage-img ticket-ani' src="./img/stage4/sta-4-2.png" alt="">
-        <img id="ticketNextBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
+
+        <img id="ticketNextBtn" class='next-button button-loc' src="./img/icon/icon_play.svg" alt="">
       </div>
     </div>
 
@@ -85,7 +81,6 @@
       <br>
       <input id="answer" index=3 oninput="this.value = this.value.toUpperCase();" type="text" class="form-control answer-input" placeholder="정답 입력">
       <img id="codeBtn" class='next-button answer-e' src="./img/icon/icon_play.svg" alt="">
-      <a href="#hintOverlay">Open Demo Modal</a>
     </div>
   <script src="./js/info.js"></script>
   <script src="./js/stage.js"></script>
