--- a/stage4-1.html
+++ b/stage4-1.html
@@ -60,7 +60,11 @@
     <!-- ticket modal page -->
     <div id="ticketOverlay" class="overlay">
       <div class="overlay-content ticket-overlay">
-        <img class='stage-img ticket-ani' src="./img/stage4/sta-4-2.png" alt="">
+        <img class='ticket-ani' src="./img/stage4/sta-4-3.png" alt="">
+          <img class='stamp-ani' src="./img/stage4/sta-4-4.svg" alt="">
+
+
+
 
         <img id="ticketNextBtn" class='next-button button-loc' src="./img/icon/icon_play.svg" alt="">
       </div>
