modal on stage 6

--- a/stage4-1.html
+++ b/stage4-1.html
@@ -51,7 +51,7 @@
           <p>녹색책은 모음 중 ㅣ 를 의미합니다.</p>
           <p>그리고 누워져 있는 책은 모음 역시</p>
           <p>같은 방향으로 눕혀주시면 됩니다.</p>
-          <p style='color: red;'>* 알파벳 A를 한글로 써보세요.</p>
+          <p style='color: red;'>* A를 한글로 써보세요. </p>
           <br>
         </div>
       </div>
@@ -62,10 +62,6 @@
       <div class="overlay-content ticket-overlay">
         <img class='ticket-ani' src="./img/stage4/sta-4-3.png" alt="">
           <img class='stamp-ani' src="./img/stage4/sta-4-4.svg" alt="">
-
-
-
-
         <img id="ticketNextBtn" class='next-button button-loc' src="./img/icon/icon_play.svg" alt="">
       </div>
     </div>
