--- a/stage5-1.html
+++ b/stage5-1.html
@@ -23,7 +23,7 @@
     <div class="bg-bottom">
         <img src="./img/bg/bg_bottom4.svg">
     </div>
-    
+
     <div class="info sml-shadow">
       <a id="infoButton" class='info-button'><img src="./img/icon/icon_info.svg" alt=""></a>
     </div>
@@ -43,7 +43,7 @@
         <div class="img-bottom-hint">
           <img src="./img/bg/bg_hinticon.svg" alt="">
         </div>
-        <div class="box-description">
+        <div class="box-description box-center">
           <p>정답은 의자입니다.</p>
           <br>
         </div>
